[package]
name = "li-domain-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
